
[tool.poetry]
name = "webcrypt"
version = "1.4.0"
description = "High level Constructs for Web App cryptography and JOSE spec implementation"
license = "Apache-2.0"
authors = ["mk <mk@plataux.com>"]
maintainers = []
readme = "README.md"
homepage = "https://github.com/plataux/webcrypt"
repository = "https://github.com/plataux/webcrypt"
keywords = ["cryptography", "security", "OpenID", "OAuth2", "JWT", "JOSE", "JWE", "JWS", "JWK", "WebCryptography"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
packages = [
    { include = "webcrypt", from = "src" },
]

[tool.poetry.scripts]
webcrypt = "webcrypt.cli:main"


[tool.poetry.dependencies]
python = ">3.9.1,<4"
pydantic = ">=1,<3"
cryptography = "^45"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0"
tox = "^3.28"
pytest = "^7.4"
pytest-cov = "^4.1"
mypy = "^1.5"
sphinx = "^4.5"
sphinx-rtd-theme = "^1.2"
recommonmark = "^0.7"


[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true


[tool.pytest.ini_options]
addopts = "--cov=webcrypt"
testpaths = [
    "tests",
]