[metadata]
name = webcrypt
version = 0.2.0
author = MK
license = GPL-3.0
license_file = LICENSE
author_email = mk@plataux.com
description = Highlevel APIs for Web App cryptography, security and password management
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/plataux/webcrypt
project_urls =
    Bug Tracker = https://github.com/plataux/webcrypt/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL-3.0 License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    setuptools>=50.3.0
    pydantic~=1.8.2
    requests~=2.26.0
    pysha3~=1.0.0
    pycryptodomex~=3.11.0
    cryptography~=35.0.0
    python-jose[cryptography]~=3.3.0
    passlib~=1.7.4
    bip32~=2.0
    mnemonic~=0.2

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest==6.2.5
    pytest-cov>=2.12.1
    mypy==0.910
    flake8==3.9.2
    tox==3.24.3


[options.package_data]
webcrypt = py.typed

[flake8]
max-line-length = 160

